--- a/VaccinbevisVerifiering/App.xaml
+++ b/VaccinbevisVerifiering/App.xaml
@@ -3,6 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VaccinbevisVerifiering.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <Style x:Key="Title" TargetType="Label">
+                <Setter Property="TextColor" Value="#695f59"/>
+                <Setter Property="FontSize" Value="36"/>
+            </Style>
+            <Style x:Key="SubTitle" TargetType="Label">
+                <Setter Property="TextColor" Value="#695f59"/>
+                <Setter Property="FontSize" Value="26"/>
+            </Style>
+            <Style x:Key="Text" TargetType="Label">
+                <Setter Property="TextColor" Value="#695f59"/>
+                <Setter Property="FontSize" Value="Medium"/>
+            </Style>
+            <Style x:Key="Link" TargetType="Label">
+                <Setter Property="TextColor" Value="#695f59"/>
+                <Setter Property="FontSize" Value="Medium"/>
+                <Setter Property="TextDecorations" Value="Underline"/>
+            </Style>
 
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
