--- a/VaccinbevisVerifiering/Views/AboutPage.xaml
+++ b/VaccinbevisVerifiering/Views/AboutPage.xaml
@@ -15,31 +15,33 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <ImageButton Grid.Column="2" Source="abort.png" HeightRequest="40" WidthRequest="40" BackgroundColor="White" CornerRadius="45" Clicked="NavigateButton_OnClicked" HorizontalOptions="Start"/>
+            <ImageButton AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.AboutViewCancelButtonText}" Grid.Column="2" Source="abort.png" HeightRequest="40" WidthRequest="40" BackgroundColor="White" CornerRadius="45" Clicked="NavigateButton_OnClicked" HorizontalOptions="Start"/>
         </Grid>
     </NavigationPage.TitleView>
     <ScrollView BackgroundColor="#195A6751">
         <AbsoluteLayout x:Name="ViewLayout" BackgroundColor="#195A6751">
             <Path AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 0.65" Fill="#ffffff" Stroke="#ffffff" Aspect="Fill" Data="m259.19002,205.23077l265,0l0,216.88349c-93.81707,47.19512 -182.76829,47.90488 -265.02439,3.87911l0.02439,-220.76259z"/>
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1,0.50">
-                <Label Text="{x:Static resource:AppResources.AboutHeaderText}" FontSize="25" FontAttributes="Bold" TextColor="#695f59" Padding="30,20,30,10"/>
-                <Label Text="{x:Static resource:AppResources.AboutText}" FontSize="18" TextColor="#695f59" Padding="30,20,30,10"/>
-                <Label Text="{x:Static resource:AppResources.FAQ}" TextDecorations="Underline" FontAttributes="Bold" FontSize="18" Padding="30,20,30,10">
+                <Label Style="{StaticResource SubTitle}" Text="{x:Static resource:AppResources.AboutHeaderText}" FontAttributes="Bold" Padding="30,20,30,10"/>
+                <Label Style="{StaticResource Text}" Text="{x:Static resource:AppResources.AboutText}" Padding="30,20,30,10"/>
+                <Label Style="{StaticResource Link}" Text="{x:Static resource:AppResources.FAQ}" FontAttributes="Bold" Padding="30,20,30,10">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="VerifierFaq" />
                     </Label.GestureRecognizers>
                 </Label>
-                <Label Text="{x:Static resource:AppResources.PrivacyPolicyLink}" TextDecorations="Underline" FontAttributes="Bold" FontSize="18" Padding="30,20,30,10">
+                <Label Style="{StaticResource Link}" Text="{x:Static resource:AppResources.PrivacyPolicyLink}" FontAttributes="Bold" Padding="30,20,30,10">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="PrivacyPolicyLink" />
                     </Label.GestureRecognizers>
                 </Label>
-                <Label x:Name="labelAppVersion" Text="{Binding AppVersion}" FontSize="18" TextColor="#695f59" Padding="30,20,30,0"/>
-                <Label x:Name="labelPublicKeyVersion" Text="{Binding PublicKeyVersion}" FontSize="18" TextColor="#695f59" Padding="30,5,30,0"/>
-                <Label x:Name="labelValidationRuleVersion" Text="{Binding ValidationRulesVersion}" FontSize="18" TextColor="#695f59" Padding="30,5,30,10"/>
+                <Label Style="{StaticResource Text}" x:Name="labelAppVersion" Text="{Binding AppVersion}" Padding="30,20,30,0"/>
+                <Label Style="{StaticResource Text}" x:Name="labelPublicKeyVersion" Text="{Binding PublicKeyVersion}" Padding="30,5,30,0" LineBreakMode="WordWrap" MaxLines="2"/>
+                <Label Style="{StaticResource Text}" x:Name="labelValidationRuleVersion" Text="{Binding ValidationRulesVersion}" Padding="30,5,30,10" LineBreakMode="WordWrap" MaxLines="2"/>
+                <Label />
+
             </StackLayout>
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 1, 1, 0.35" Padding="0,0,0,0" >
-                <Image Source="digg_centered_2.png" WidthRequest="200" HorizontalOptions="CenterAndExpand" VerticalOptions="Start" Margin="30" AbsoluteLayout.LayoutBounds="20, 40, 50, 0.50"/>
+                <Image Source="digg_centered_2.png" AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.AboutViewLogotypeText}" WidthRequest="200" HorizontalOptions="CenterAndExpand" VerticalOptions="Start" Margin="30" AbsoluteLayout.LayoutBounds="20, 40, 50, 0.50"/>
             </StackLayout>
         </AbsoluteLayout>
     </ScrollView>
