--- a/VaccinbevisVerifiering/Views/MainPage.xaml
+++ b/VaccinbevisVerifiering/Views/MainPage.xaml
@@ -21,7 +21,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <ImageButton Grid.Column="2" Source="info2.png" HeightRequest="40" WidthRequest="40" BackgroundColor="White" Command="{Binding AboutCommand}" HorizontalOptions="Start"/>
+            <ImageButton AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.MainViewInfoButtonText}" Grid.Column="2" Source="info2.png" HeightRequest="40" WidthRequest="40" BackgroundColor="White" Command="{Binding AboutCommand}" HorizontalOptions="Start"/>
         </Grid>
     </NavigationPage.TitleView>
     <ContentPage.Content>
@@ -29,18 +29,18 @@
         <AbsoluteLayout x:Name="ViewLayout" BackgroundColor="#195A6751">
             <Path AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 0.65" Fill="#ffffff" Stroke="#ffffff" Aspect="Fill" Data="m259.19002,205.23077l265,0l0,216.88349c-93.81707,47.19512 -182.76829,47.90488 -265.02439,3.87911l0.02439,-220.76259z"/>
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 0.50">
-                <Label Text="{x:Static resource:AppResources.HeaderText}" HorizontalOptions="Center" FontSize="26" TextColor="#695f59" Padding="30,20,30,0" />
-                <Label Text="{x:Static resource:AppResources.InformationHeader}" FontAttributes="Bold" HorizontalOptions="Center" FontSize="34" TextColor="#695f59" Padding="30,5,30,0" />
-                <Label Text="{x:Static resource:AppResources.InformationText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontSize="Medium" TextColor="#695f59" Padding="30,30,30,20" />
-                <Image Source="mobil.png" HeightRequest="150" HorizontalOptions="Center"/>
+                <Label Style="{StaticResource SubTitle}" Text="{x:Static resource:AppResources.HeaderText}" HorizontalOptions="Center" Padding="30,20,30,0" />
+                <Label Style="{StaticResource Title}" Text="{x:Static resource:AppResources.InformationHeader}" FontAttributes="Bold" HorizontalOptions="Center" Padding="30,5,30,0" />
+                <Label Style="{StaticResource Text}" Text="{x:Static resource:AppResources.InformationText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" Padding="30,30,30,20" />
+                <Image AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.MainViewImageText}" Source="mobil.png" HeightRequest="150" HorizontalOptions="Center"/>
                 <Label x:Name="labelValidKeysText" IsVisible="{Binding ValidKeysTextVisible}" Text="{Binding ValidKeysText}" FontSize="Large" BackgroundColor="White" FontAttributes="Bold" TextColor="Color.Red" Padding="10,20,10,0" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
             </StackLayout>
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 1, 1, 0.35" >
-                <Button Text="{x:Static resource:AppResources.ScanButtonText}" Margin="20" HorizontalOptions="CenterAndExpand" Command="{Binding ScanCommand}" 
+                    <Button Text="{x:Static resource:AppResources.ScanButtonText}" Margin="20" HorizontalOptions="CenterAndExpand" Command="{Binding ScanCommand}" 
                     BackgroundColor="#5A6751" TextColor="White" Padding="30,20,30,20"
                     FontAttributes="Bold" FontSize="Large" CornerRadius="35" WidthRequest="300" />
-                    <Label Text="{x:Static resource:AppResources.LinkText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" 
-                    Padding="30,10,30,40" TextColor="#5A6751" FontSize="Medium" TextDecorations="Underline" LineBreakMode="WordWrap" MaxLines="3">
+                    <Label Style="{StaticResource Link}" Text="{x:Static resource:AppResources.LinkText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" 
+                    Padding="30,10,30,40" LineBreakMode="WordWrap" MaxLines="3">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding TapCommand}"
                             CommandParameter="https://www.digg.se/vaccinationsbevis-verifiering/information" />
