--- a/VaccinbevisVerifiering/Views/MainPage.xaml
+++ b/VaccinbevisVerifiering/Views/MainPage.xaml
@@ -21,27 +21,26 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <ImageButton AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.MainViewInfoButtonText}" Source="info2.png" HeightRequest="60" WidthRequest="60" BackgroundColor="White" Command="{Binding AboutCommand}" Grid.Column="2" Padding="10,10,10,10" HorizontalOptions="Start"/>
+            <ImageButton AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.MainViewInfoButtonText}" Source="info2.png" HeightRequest="60" WidthRequest="60" BackgroundColor="Transparent" CornerRadius="22" Command="{Binding AboutCommand}" Grid.Column="2" Padding="5,5,5,5" HorizontalOptions="Start"/>
             </Grid>
     </NavigationPage.TitleView>
     <ContentPage.Content>
         <ScrollView BackgroundColor="White">
             <Grid>
-            <!--<Path AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 0.65" Fill="#ffffff" Stroke="#ffffff" Aspect="Fill" Data="m259.19002,205.23077l265,0l0,216.88349c-93.81707,47.19512 -182.76829,47.90488 -265.02439,3.87911l0.02439,-220.76259z"/>-->
-            <StackLayout Grid.RowSpan="2">
-                <Label Style="{StaticResource SubTitle}" Text="{x:Static resource:AppResources.HeaderText}" HorizontalOptions="Center" Margin="30,20,30,0"/>
-                <Label Style="{StaticResource Title}" Text="{x:Static resource:AppResources.InformationHeader}" FontAttributes="Bold" HorizontalOptions="Center"/>
-                <Label Style="{StaticResource Text}" Text="{x:Static resource:AppResources.InformationText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" Margin="30"/>
-                <Image AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.MainViewImageText}" Source="mobil.png" HeightRequest="150" HorizontalOptions="Center"/>
-                <Label x:Name="labelValidKeysText" IsVisible="{Binding ValidKeysTextVisible}" Text="{Binding ValidKeysText}" FontSize="Large" BackgroundColor="White" FontAttributes="Bold" TextColor="Color.Red" Padding="10,20,10,0" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
-            </StackLayout>
-               
-            
-                <StackLayout Grid.Row="2" Margin="5">
-                    <Button Text="{x:Static resource:AppResources.ScanButtonText}" HeightRequest="60" Margin="30" HorizontalOptions="FillAndExpand" Command="{Binding ScanCommand}" 
+                <StackLayout Grid.Row="0" >
+                    <Label Style="{StaticResource SubTitle}" Text="{x:Static resource:AppResources.HeaderText}" HorizontalOptions="Center" Margin="30,20,30,0"/>
+                    <Label Style="{StaticResource Title}" Text="{x:Static resource:AppResources.InformationHeader}" FontAttributes="Bold" HorizontalOptions="Center"/>
+                    <Label Style="{StaticResource Text}" Text="{x:Static resource:AppResources.InformationText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" Margin="30,10,30,0"/>
+                    <Image AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.MainViewImageText}" Source="mobil.png" HeightRequest="150" HorizontalOptions="Center" Margin="0,30,10,10"/>
+                    <Label x:Name="labelValidKeysText" IsVisible="{Binding ValidKeysTextVisible}" Text="{Binding ValidKeysText}" FontSize="Large" BackgroundColor="White" FontAttributes="Bold" TextColor="Color.Red" Margin="10,20,10,20" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+                 </StackLayout>
+                
+                <Path Grid.Row="1" Fill="#195A6751" Stroke="#195A6751" StrokeThickness="0" Aspect="Fill" Data="m485.9263,382.49569c6.48247,6.3858 27.64979,5.93851 34.68626,0l0,31.60021l-34.68626,0l0,-31.60021z" Margin="0,-50,0,-50"></Path>
+                <StackLayout Grid.Row="1" Margin="0,70,0,0">
+                    <Button Text="{x:Static resource:AppResources.ScanButtonText}" HeightRequest="60" HorizontalOptions="FillAndExpand" Command="{Binding ScanCommand}"
                     BackgroundColor="#5A6751" TextColor="White"
-                    FontAttributes="Bold" FontSize="Large" CornerRadius="30" />
-                    <Label Style="{StaticResource Link}" Text="{x:Static resource:AppResources.LinkText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" LineBreakMode="WordWrap" MaxLines="3" Margin="30,0,30,0">
+                    FontAttributes="Bold" FontSize="Large" CornerRadius="30" Margin="30,0,30,0"/>
+                    <Label Style="{StaticResource Link}" Text="{x:Static resource:AppResources.LinkText}" HorizontalOptions="Center" HorizontalTextAlignment="Center" LineBreakMode="WordWrap" MaxLines="3" Margin="30,20,30,0">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding TapCommand}"
                             CommandParameter="https://www.digg.se/vaccinationsbevis-verifiering/information" />
