--- a/VaccinbevisVerifiering/Views/AboutPage.xaml
+++ b/VaccinbevisVerifiering/Views/AboutPage.xaml
@@ -16,13 +16,14 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <ImageButton AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.AboutViewCancelButtonText}" Grid.Column="2" Source="abort.png" HeightRequest="60" WidthRequest="60" BackgroundColor="Transparent" CornerRadius="22" Clicked="NavigateButton_OnClicked" HorizontalOptions="Start" Padding="10,10,10,10"/>
+
         </Grid>
     </NavigationPage.TitleView>
     <ScrollView BackgroundColor="White">
         <Grid>
             <StackLayout Grid.Row="0">
-                <Label Style="{StaticResource SubTitle}" Text="{x:Static resource:AppResources.AboutHeaderText}" FontAttributes="Bold" Margin="30,20,30,0"/>
+                <ImageButton AutomationProperties.IsInAccessibleTree="True" AutomationProperties.Name="{x:Static resource:AppResources.AboutViewCancelButtonText}" Source="abort.png" HeightRequest="60" WidthRequest="60" BackgroundColor="Transparent" CornerRadius="22" Clicked="NavigateButton_OnClicked" HorizontalOptions="End" Padding="15,15,15,15"/>
+                <Label Style="{StaticResource SubTitle}" Text="{x:Static resource:AppResources.AboutHeaderText}" FontAttributes="Bold" Margin="30,0,30,0"/>
                 <Label Style="{StaticResource Text}" Text="{x:Static resource:AppResources.AboutText}" Margin="30,20,30,10"/>
                 <Label Style="{StaticResource Link}" Text="{x:Static resource:AppResources.FAQ}" FontAttributes="Bold" Margin="30,20,30,10">
                     <Label.GestureRecognizers>
